--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="https://iti.gov.eg/assets/images/ColoredLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+
     <title>Recruitment</title>
   </head>
-  <body>
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
