--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" style="max-width: 100vw;">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="https://iti.gov.eg/assets/images/ColoredLogo.svg" />
+    <link rel="icon" type="image/x-icon" href="public/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
-    <title>Recruitment</title>
+    <title>RecruitHub</title>
   </head>
   <body >
     <div id="root"></div>
